이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="cont">
           <ul>
             <li class="img">
-              <img src="src/images/img-temp.jpg" alt="사진">
+              <img src="https://firebasestorage.googleapis.com/v0/b/vue-project-4f4f0.appspot.com/o/garden%2Fimages%2Fimg-temp.jpg?alt=media&token=b530df83-76d8-437b-b75b-4ae8dc277c37" alt="사진">
             </li>
             <li class="name">SHIN SUNGMIN</li>
             <li class="position">Web Ui Developer</li>
@@ -278,7 +278,16 @@
 <!-- // #wrap -->
 
 <script src="//www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59524713-1"></script>
 <script src="dist/bundle.js"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-59524713-1');
+</script>
+
 </body>
 
 </html>
